# asimov-cli

./: .editorconfig  .gitignore  AUTHORS  CHANGES.md  Cargo.toml  README.md  VERSION  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml  publish-cargo.yaml  release.yaml  tweet-release.yaml  update-scoop.yaml
src/: commands.rs  exit.rs  external_commands.rs  feature.rs  features.rs  lib.rs  main.rs  shared.rs  subcommands_provider.rs
src/commands/: external.rs  fetch.rs  help.rs  help_cmd.rs  import.rs
tests/: execute_external.rs  execute_help_cmd.rs  find.rs  list.rs  shared.rs
