# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-cli"
version = "25.0.0-dev.4"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2021"
rust-version = "1.81"
description = "ASIMOV Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.so"
repository = "https://github.com/asimov-platform/asimov-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["text-processing"]
publish = true

[features]
default = ["all"]
all = ["fetch"]
fetch = ["dep:asimov-proxy"]
import = ["dep:asimov-proxy"]
unstable = ["import"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.0", features = [
    "build",
    "tzdb",
], default-features = false }
cc = "1.1"

[dev-dependencies]
temp-dir = "0.1"
indoc = "2.0"

[dependencies]
asimov-proxy = { version = "25.0.0-dev.5", optional = true }
clap = { version = "4.5", default-features = false }
clientele = { version = "0.3.2", features = ["gofer"] }
color-print = "=0.3.7"
rayon = "1.10"
miette = { version = "7.5", features = ["fancy"] }
thiserror = "2"

[[bin]]
name = "asimov"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "symbols"
#debug = true
